--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -8,7 +8,7 @@ log4j.appender.console=org.apache.log4j.ConsoleAppender
 log4j.appender.console.layout=org.apache.log4j.PatternLayout
 # PatternLayout used
 # log4j.appender.console.layout.ConversionPattern=%-4r [%t] %-5p %c %x - %m%n
-log4j.appender.console.layout.ConversionPattern=%d{yyyy/MM/dd HH:mm:ss} %p %c %n (%M) [%L]-> %m%n
+log4j.appender.console.layout.ConversionPattern=%d{yyyy/MM/dd HH:mm:ss} %p %c (%M) [%L]-> %m%n
 # %-4r program running time write = second
 # %t Thread 
 # %p Logging level
